--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -5,21 +5,26 @@ section1Title = _lang(cis.section1Title)
 # `{ojs} section1Title` {#section1}
 
 ```{ojs}
-// Load CIS data from CSV with proper type conversion
-cisData = await d3.csv("/data/cis/CIS_DATA.csv", row => {
-  return {
-    ...row,
-    "weather-station_density": parseFloat(row["weather-station_density"]),
-    "cloud-coverage_meanannual": parseFloat(row["cloud-coverage_meanannual"]),
-    "cv-precipitation_agreement": parseFloat(row["cv-precipitation_agreement"]),
-    "short-term_frcst_skill": parseFloat(row["short-term_frcst_skill"]),
-    "seasonal_frcst_skill": parseFloat(row["seasonal_frcst_skill"]),
-    "cis_readiness_index": parseFloat(row["cis_readiness_index"]),
-    gaul0_code: parseInt(row.gaul0_code),
-    gaul1_code: parseInt(row.gaul1_code),
-    gaul2_code: parseInt(row.gaul2_code)
-  };
-})
+// Load CIS data using DuckDB with Parquet for better performance
+cisDB = await DuckDBClient.of({
+  cis_data: FileAttachment("/data/cis/CIS_nb_data.parquet")
+});
+
+// Query the CIS data with proper type conversion
+cisData = await cisDB.query(`
+  SELECT 
+    *,
+    CAST("weather-station_density" AS DOUBLE) as "weather-station_density",
+    CAST("cloud-coverage_meanannual" AS DOUBLE) as "cloud-coverage_meanannual",
+    CAST("cv-precipitation_agreement" AS DOUBLE) as "cv-precipitation_agreement",
+    CAST("short-term_frcst_skill" AS DOUBLE) as "short-term_frcst_skill",
+    CAST("seasonal_frcst_skill" AS DOUBLE) as "seasonal_frcst_skill",
+    CAST(cis_readiness_index AS DOUBLE) as cis_readiness_index,
+    CAST(gaul0_code AS INTEGER) as gaul0_code,
+    CAST(gaul1_code AS INTEGER) as gaul1_code,
+    CAST(gaul2_code AS INTEGER) as gaul2_code
+  FROM cis_data
+`)
 ```
 
 ```{ojs}
