--- a/notebooks/cis/_cis_hazard_intersection.qmd
+++ b/notebooks/cis/_cis_hazard_intersection.qmd
@@ -14,13 +14,23 @@ section2Intro = _lang(cis.section2Intro)
 // SECTION 2: CIS READINESS × CLIMATE HAZARD INTERSECTION
 // ============================================================================
 
-// Load hazard data using CSV (will switch to DuckDB/Parquet in production)
-hazardDataRaw = await d3.csv("/data/cis/haz-means_adm_historic.csv", d3.autoType);
+// Load hazard data using DuckDB with Parquet for better performance
+hazardDB = await DuckDBClient.of({
+  hazard_data: FileAttachment("/data/cis/haz-means_adm_historic.parquet")
+});
 
-// Filter for only the hazards we need
-hazardData = hazardDataRaw.filter(d => 
-  d.hazard === "NDWS-mean" || d.hazard === "NDWL0-mean"
-);
+// Query for only the hazards we need
+hazardData = await hazardDB.query(`
+  SELECT 
+    iso3,
+    admin0_name,
+    admin1_name,
+    admin2_name,
+    hazard,
+    value
+  FROM hazard_data
+  WHERE hazard IN ('NDWS-mean', 'NDWL0-mean')
+`);
 
 // Load CIS readiness cutoffs from three_cut_offs.csv
 cisReadinessCutoffs = await d3.csv("/data/cis/three_cut_offs.csv").then(data => {
