Fix DuckDB Parquet loading: Process data in JavaScript instead of SQL
- Avoid SQL CAST issues with mixed data types in Parquet files
- Load raw data from Parquet and transform in JavaScript
- Fix duplicate key errors in hazard data by filtering in JS
- Maintain performance benefits of Parquet format

--- a/notebooks/cis/_cis_hazard_intersection.qmd
+++ b/notebooks/cis/_cis_hazard_intersection.qmd
@@ -19,18 +19,13 @@ hazardDB = await DuckDBClient.of({
   hazard_data: FileAttachment("/data/cis/haz-means_adm_historic.parquet")
 });
 
-// Query for only the hazards we need
-hazardData = await hazardDB.query(`
-  SELECT 
-    iso3,
-    admin0_name,
-    admin1_name,
-    admin2_name,
-    hazard,
-    value
-  FROM hazard_data
-  WHERE hazard IN ('NDWS-mean', 'NDWL0-mean')
-`);
+// Load all data and filter in JavaScript to avoid DuckDB duplicate key issues
+hazardDataRaw = await hazardDB.query(`SELECT * FROM hazard_data`);
+
+// Filter for only the hazards we need
+hazardData = hazardDataRaw.filter(d => 
+  d.hazard === "NDWS-mean" || d.hazard === "NDWL0-mean"
+);
 
 // Load CIS readiness cutoffs from three_cut_offs.csv
 cisReadinessCutoffs = await d3.csv("/data/cis/three_cut_offs.csv").then(data => {
