Fix floating sidebar minimize button with direct DOM manipulation

--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -27,8 +27,9 @@ atlasHero(nbTitle, hero_url);
 ```{ojs}
 //| echo: false
 
-// Floating sidebar with admin level selectors
-html`
+// Floating sidebar with admin level selectors and minimize functionality
+{
+  const container = htl.html`
 <style>
 .floating-sidebar {
   position: fixed;
@@ -38,19 +39,56 @@ html`
   background: white;
   border: 1px solid #ddd;
   border-radius: 8px;
-  padding: 15px;
   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
   z-index: 1000;
   max-height: calc(100vh - 140px);
   overflow-y: auto;
+  transition: all 0.3s ease;
 }
 
-.floating-sidebar h4 {
-  margin-top: 0;
+.floating-sidebar.minimized {
+  width: 200px;
+  max-height: 60px;
+  overflow: hidden;
+}
+
+.sidebar-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   margin-bottom: 15px;
-  font-size: 16px;
-  border-bottom: 2px solid #0066cc;
   padding-bottom: 8px;
+  border-bottom: 2px solid #0066cc;
+}
+
+.sidebar-header h4 {
+  margin: 0;
+  font-size: 16px;
+}
+
+.minimize-btn {
+  background: #0066cc;
+  border: none;
+  cursor: pointer;
+  font-size: 14px;
+  padding: 4px 10px;
+  color: #000000;
+  border-radius: 4px;
+  transition: background 0.2s;
+}
+
+.minimize-btn:hover {
+  background: #004499;
+}
+
+.sidebar-content {
+  padding: 0 15px 15px 15px;
+  transition: opacity 0.3s ease;
+}
+
+.floating-sidebar.minimized .sidebar-content {
+  display: none;
+  opacity: 0;
 }
 
 .sidebar-section {
@@ -65,26 +103,47 @@ html`
     width: 100%;
     margin-bottom: 20px;
   }
+  .floating-sidebar.minimized {
+    width: 100%;
+  }
 }
 </style>
 
 <div class="floating-sidebar">
-  <h4>Region Selection</h4>
-  <div class="sidebar-section">
-    ${viewof selectedAdmin0}
+  <div style="padding: 15px 15px 0 15px;">
+    <div class="sidebar-header">
+      <h4>Region Selection</h4>
+      <button class="minimize-btn">▼</button>
+    </div>
   </div>
-  <div class="sidebar-section">
-    ${viewof selectedAdmin1}
-  </div>
-  <div class="sidebar-section">
-    ${viewof selectedAdmin2}
-  </div>
-  <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid #eee; font-size: 0.9em; color: #666;">
-    <strong>Current Selection:</strong><br>
-    ${breadcrumb}
+  <div class="sidebar-content">
+    <div class="sidebar-section">
+      ${viewof selectedAdmin0}
+    </div>
+    <div class="sidebar-section">
+      ${viewof selectedAdmin1}
+    </div>
+    <div class="sidebar-section">
+      ${viewof selectedAdmin2}
+    </div>
+    <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid #eee; font-size: 0.9em; color: #666;">
+      <strong>Current Selection:</strong><br>
+      ${breadcrumb}
+    </div>
   </div>
 </div>
-`
+`;
+
+  const sidebar = container.querySelector('.floating-sidebar');
+  const btn = container.querySelector('.minimize-btn');
+  
+  btn.onclick = () => {
+    sidebar.classList.toggle('minimized');
+    btn.textContent = sidebar.classList.contains('minimized') ? '▲' : '▼';
+  };
+  
+  return container;
+}
 ```
 
 ```{ojs}
