Add region information to map tooltips in Section 1.1 (How strong is weather measurement?)

--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -352,9 +352,16 @@ s11MapData = {
               fill: useRaw ? d => d.properties.weatherStation : d => d.properties.weatherStationClass,
               stroke: "#333",
               strokeWidth: 0.5,
-              title: d => `${d.properties.admin0_name || d.properties.admin1_name || d.properties.admin2_name}\n` +
-                          `Weather Station: ${d.properties.weatherStation?.toFixed(3) || 'N/A'}\n` +
-                          `Class: ${d.properties.weatherStationClass}`
+              title: d => {
+                const regionName = currentAdminLevel === 0 
+                  ? d.properties.admin0_name 
+                  : currentAdminLevel === 1
+                  ? `${d.properties.admin1_name}, ${d.properties.admin0_name}`
+                  : `${d.properties.admin2_name}, ${d.properties.admin1_name}, ${d.properties.admin0_name}`;
+                return `Region: ${regionName}\n` +
+                       `Weather Station: ${d.properties.weatherStation?.toFixed(3) || 'N/A'}\n` +
+                       `Class: ${d.properties.weatherStationClass}`;
+              }
             })
           ]
         })}
@@ -383,9 +390,16 @@ s11MapData = {
               fill: useRaw ? d => d.properties.cloudCover : d => d.properties.cloudCoverClass,
               stroke: "#333",
               strokeWidth: 0.5,
-              title: d => `${d.properties.admin0_name || d.properties.admin1_name || d.properties.admin2_name}\n` +
-                          `Cloud Cover: ${d.properties.cloudCover?.toFixed(3) || 'N/A'}\n` +
-                          `Class: ${d.properties.cloudCoverClass}`
+              title: d => {
+                const regionName = currentAdminLevel === 0 
+                  ? d.properties.admin0_name 
+                  : currentAdminLevel === 1
+                  ? `${d.properties.admin1_name}, ${d.properties.admin0_name}`
+                  : `${d.properties.admin2_name}, ${d.properties.admin1_name}, ${d.properties.admin0_name}`;
+                return `Region: ${regionName}\n` +
+                       `Cloud Cover: ${d.properties.cloudCover?.toFixed(3) || 'N/A'}\n` +
+                       `Class: ${d.properties.cloudCoverClass}`;
+              }
             })
           ]
         })}
