Update Admin Name format in tables to match Section 2 (Region, Country format)
- Update all table Admin Name columns to show 'Region, Country' or 'District, Region' format
- Applied to Section 1.1, 1.2, 1.3, and 1.4 tables and download buttons
- Matches the format used in Section 2

--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -472,13 +472,20 @@ s11MapData = {
     </div>`;
   } else {
     // Table view
-    const tableData = filteredData.map(d => ({
-      "Admin Name": d[`admin${currentAdminLevel}_name`] || d.admin0_name,
-      "Weather Station (Raw)": d["weather-station_density"]?.toFixed(3) || "N/A",
-      "Weather Station (Class)": classifyTercile(d["weather-station_density"], africaTerciles.weatherStation),
-      "Cloud Cover (Raw)": d["cloud-coverage_meanannual"]?.toFixed(3) || "N/A",
-      "Cloud Cover (Class)": classifyTercile(d["cloud-coverage_meanannual"], africaTerciles.cloudCover)
-    }));
+    const tableData = filteredData.map(d => {
+      const adminName = currentAdminLevel === 0 
+        ? d.admin0_name 
+        : currentAdminLevel === 1
+        ? `${d.admin1_name}, ${d.admin0_name}`
+        : `${d.admin2_name}, ${d.admin1_name}`;
+      return {
+        "Admin Name": adminName,
+        "Weather Station (Raw)": d["weather-station_density"]?.toFixed(3) || "N/A",
+        "Weather Station (Class)": classifyTercile(d["weather-station_density"], africaTerciles.weatherStation),
+        "Cloud Cover (Raw)": d["cloud-coverage_meanannual"]?.toFixed(3) || "N/A",
+        "Cloud Cover (Class)": classifyTercile(d["cloud-coverage_meanannual"], africaTerciles.cloudCover)
+      };
+    });
     
     return Inputs.table(tableData, {
       sort: "Admin Name",
@@ -604,11 +611,18 @@ s12MapData = {
       ]
     });
   } else {
-    const tableData = filteredData.map(d => ({
-      "Admin Name": d[`admin${currentAdminLevel}_name`] || d.admin0_name,
-      "Satellite Agreement (Raw)": parseFloat(d["cv-precipitation_agreement"])?.toFixed(1) || "N/A",
-      "Satellite Agreement (Class)": classifyPrecipAgreement(d["cv-precipitation_agreement"])
-    }));
+    const tableData = filteredData.map(d => {
+      const adminName = currentAdminLevel === 0 
+        ? d.admin0_name 
+        : currentAdminLevel === 1
+        ? `${d.admin1_name}, ${d.admin0_name}`
+        : `${d.admin2_name}, ${d.admin1_name}`;
+      return {
+        "Admin Name": adminName,
+        "Satellite Agreement (Raw)": parseFloat(d["cv-precipitation_agreement"])?.toFixed(1) || "N/A",
+        "Satellite Agreement (Class)": classifyPrecipAgreement(d["cv-precipitation_agreement"])
+      };
+    });
     
     return Inputs.table(tableData, {
       sort: "Admin Name",
@@ -621,11 +635,18 @@ s12MapData = {
 ```{ojs}
 // Download button for Section 1.2
 downloadButton(
-  filteredData.map(d => ({
-    "Admin Name": d[`admin${currentAdminLevel}_name`] || d.admin0_name,
-    "Satellite Agreement": parseFloat(d["cv-precipitation_agreement"]),
-    "Classification": classifyPrecipAgreement(d["cv-precipitation_agreement"])
-  })),
+  filteredData.map(d => {
+    const adminName = currentAdminLevel === 0 
+      ? d.admin0_name 
+      : currentAdminLevel === 1
+      ? `${d.admin1_name}, ${d.admin0_name}`
+      : `${d.admin2_name}, ${d.admin1_name}`;
+    return {
+      "Admin Name": adminName,
+      "Satellite Agreement": parseFloat(d["cv-precipitation_agreement"]),
+      "Classification": classifyPrecipAgreement(d["cv-precipitation_agreement"])
+    };
+  }),
   "cis_precipitation_agreement",
   _lang(cis.downloadLabel)
 )
@@ -686,8 +707,14 @@ s13Data = {
     const longTerm = d["seasonal_frcst_skill"];
     const classification = classifyForecastSkill(shortTerm, longTerm);
     
+    const adminName = currentAdminLevel === 0 
+      ? d.admin0_name 
+      : currentAdminLevel === 1
+      ? `${d.admin1_name}, ${d.admin0_name}`
+      : `${d.admin2_name}, ${d.admin1_name}`;
+    
     return {
-      admin: d[`admin${currentAdminLevel}_name`] || d.admin0_name,
+      admin: adminName,
       shortTerm: shortTerm,
       longTerm: longTerm,
       delta: shortTerm && longTerm ? shortTerm - longTerm : null,
@@ -890,16 +917,23 @@ s14MapData = {
       ]
     });
   } else if (s14ViewType === "Table") {
-    const tableData = filteredData.map(d => ({
-      "Admin Name": d[`admin${currentAdminLevel}_name`] || d.admin0_name,
-      "CIS Readiness (Raw)": d["cis_readiness_index"]?.toFixed(3) || "N/A",
-      "CIS Readiness (Class)": classifyTercile(d["cis_readiness_index"], africaTerciles.cisReadiness),
-      "Weather Station (Class)": classifyTercile(d["weather-station_density"], africaTerciles.weatherStation),
-      "Cloud Cover (Class)": classifyTercile(d["cloud-coverage_meanannual"], africaTerciles.cloudCover),
-      "Precip Agreement (Class)": classifyPrecipAgreement(d["cv-precipitation_agreement"]),
-      "Short-term (Raw)": d["short-term_frcst_skill"]?.toFixed(3) || "N/A",
-      "Long-term (Raw)": d["seasonal_frcst_skill"]?.toFixed(3) || "N/A"
-    }));
+    const tableData = filteredData.map(d => {
+      const adminName = currentAdminLevel === 0 
+        ? d.admin0_name 
+        : currentAdminLevel === 1
+        ? `${d.admin1_name}, ${d.admin0_name}`
+        : `${d.admin2_name}, ${d.admin1_name}`;
+      return {
+        "Admin Name": adminName,
+        "CIS Readiness (Raw)": d["cis_readiness_index"]?.toFixed(3) || "N/A",
+        "CIS Readiness (Class)": classifyTercile(d["cis_readiness_index"], africaTerciles.cisReadiness),
+        "Weather Station (Class)": classifyTercile(d["weather-station_density"], africaTerciles.weatherStation),
+        "Cloud Cover (Class)": classifyTercile(d["cloud-coverage_meanannual"], africaTerciles.cloudCover),
+        "Precip Agreement (Class)": classifyPrecipAgreement(d["cv-precipitation_agreement"]),
+        "Short-term (Raw)": d["short-term_frcst_skill"]?.toFixed(3) || "N/A",
+        "Long-term (Raw)": d["seasonal_frcst_skill"]?.toFixed(3) || "N/A"
+      };
+    });
     
     return Inputs.table(tableData, {
       sort: "CIS Readiness (Raw)",
@@ -961,15 +995,22 @@ s14MapData = {
 ```{ojs}
 // Download button for Section 1.4
 downloadButton(
-  filteredData.map(d => ({
-    "Admin Name": d[`admin${currentAdminLevel}_name`] || d.admin0_name,
-    "CIS Readiness Index": d["cis_readiness_index"],
-    "Weather Station Density": d["weather-station_density"],
-    "Cloud Coverage": d["cloud-coverage_meanannual"],
-    "Precipitation Agreement": parseFloat(d["cv-precipitation_agreement"]),
-    "Short-term Forecast Skill": d["short-term_frcst_skill"],
-    "Long-term Forecast Skill": d["seasonal_frcst_skill"]
-  })),
+  filteredData.map(d => {
+    const adminName = currentAdminLevel === 0 
+      ? d.admin0_name 
+      : currentAdminLevel === 1
+      ? `${d.admin1_name}, ${d.admin0_name}`
+      : `${d.admin2_name}, ${d.admin1_name}`;
+    return {
+      "Admin Name": adminName,
+      "CIS Readiness Index": d["cis_readiness_index"],
+      "Weather Station Density": d["weather-station_density"],
+      "Cloud Coverage": d["cloud-coverage_meanannual"],
+      "Precipitation Agreement": parseFloat(d["cv-precipitation_agreement"]),
+      "Short-term Forecast Skill": d["short-term_frcst_skill"],
+      "Long-term Forecast Skill": d["seasonal_frcst_skill"]
+    };
+  }),
   "cis_readiness_index",
   _lang(cis.downloadLabel)
 )
