Update Section 3.1 charts: add legends and x-axis at top and bottom
- Add legend and x-axis at both top and bottom for Dumbbell Chart
- Add parity line explanation and x-axis at both top and bottom for Scatter Plot
- Remove legend items from Scatter Plot (keep only parity line explanation)
- Fix axis configuration to show x-axis on both top and bottom

--- a/notebooks/cis/_cis_implementation.qmd
+++ b/notebooks/cis/_cis_implementation.qmd
@@ -499,21 +499,34 @@ s3Legend = {
   const chartHeight = Math.max(600, s3SortedData.length * 25);
   
       yield html`<div style="width: 100%; overflow-x: auto;">
+    <div style="margin-bottom: 10px; padding: 10px; background: #f8f9fa; border-radius: 5px;">
+      <div style="display: flex; gap: 20px; align-items: center; font-size: 12px;">
+        <div><span style="color: #377eb8;">●</span> ${_lang(cis.s3ReadinessLabel)}</div>
+            <div><span style="color: #ff7f00;">▲</span> ${s3CurrentAccessLabel}</div>
+        <div><span style="color: #4daf4a;">━</span> ${_lang(cis.s3PositiveGap)}</div>
+        <div><span style="color: #e41a1c;">━</span> ${_lang(cis.s3NegativeGap)}</div>
+        <div><span style="color: #999999;">━</span> Similar values</div>
+      </div>
+    </div>
     ${Plot.plot({
       width: 1200,
       height: chartHeight,
       marginLeft: 150,
       marginRight: 50,
+      marginTop: 80,
+      marginBottom: 80,
       x: {
         domain: [0, 1],
         label: "Value (0-1 scale)",
-        grid: true
+        grid: true,
+        axis: "top"
       },
       y: {
         label: null,
         domain: s3SortedData.map(d => d.admin0_name)
       },
       marks: [
+        Plot.axisX({anchor: "bottom", label: "Value (0-1 scale)"}),
         // Connecting lines
             Plot.link(s3SortedData.filter(d => d.accessValue !== null && !isNaN(d.accessValue)), {
           x1: "cis_readiness_avg",
@@ -565,13 +578,21 @@ s3Legend = {
     </div>`;
     } else {
       yield html`<div style="width: 100%; overflow-x: auto;">
+    <div style="margin-bottom: 10px; padding: 10px; background: #f8f9fa; border-radius: 5px;">
+      <div style="font-size: 12px;">
+        <strong>${_lang(cis.s3ParityLine)}:</strong> Points above the line indicate access exceeds readiness; points below indicate readiness exceeds access.
+      </div>
+    </div>
     ${Plot.plot({
       width: 1000,
       height: 1000,
+      marginTop: 80,
+      marginBottom: 80,
       x: {
         domain: [0, 1],
         label: _lang(cis.s3ReadinessLabel) + " →",
-        grid: true
+        grid: true,
+        axis: "top"
       },
       y: {
         domain: [0, 1],
@@ -579,6 +600,7 @@ s3Legend = {
         grid: true
       },
       marks: [
+        Plot.axisX({anchor: "bottom", label: _lang(cis.s3ReadinessLabel) + " →"}),
         // Diagonal reference line (parity)
         Plot.line([[0, 0], [1, 1]], {
           stroke: "#999",
