--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -175,7 +175,7 @@ viewof selectedAdmin0 = multiSelect({
   placeholderText: _lang(cis.admin0Placeholder),
   options: uniqueAdmin0.map(d => ({ value: d, label: d })),
   selected: ['Kenya'],
-  maxSelections: 54
+  maxSelections: 10
 })
 ```
 
@@ -733,30 +733,142 @@ s13Data = {
 // Section 1.3 Chart/Table
 {
   if (s13ViewType === "Chart") {
-    // Prepare data for grouped bar chart
-    const chartData = s13Data.flatMap(d => [
-      { admin: d.admin, type: "Short-term", value: d.shortTerm },
-      { admin: d.admin, type: "Long-term", value: d.longTerm }
+    // Prepare data with delta for grouped bar chart
+    const dataWithDelta = s13Data.map(d => {
+      const short = d.shortTerm != null ? parseFloat(d.shortTerm.toFixed(2)) : null;
+      const long = d.longTerm != null ? parseFloat(d.longTerm.toFixed(2)) : null;
+      // Delta = long - short (for the delta bar, negative means long < short)
+      const delta = (short != null && long != null) ? parseFloat((long - short).toFixed(2)) : null;
+      return {
+        name: d.admin,
+        short: short,
+        long: long,
+        delta: delta
+      };
+    });
+    
+    // Sort data based on selected mode (default = short-term skill descending)
+    const sortMode = s13SortBy === "Short-term skill" ? "short" : 
+                     s13SortBy === "Long-term skill" ? "long" : "delta";
+    
+    const sorted = (() => {
+      if (sortMode === "short") {
+        return dataWithDelta.sort((a, b) => (b.short || 0) - (a.short || 0));
+      } else if (sortMode === "long") {
+        return dataWithDelta.sort((a, b) => (b.long || 0) - (a.long || 0));
+      } else {
+        return dataWithDelta.sort((a, b) => {
+          const deltaA = (a.long || 0) - (a.short || 0);
+          const deltaB = (b.long || 0) - (b.short || 0);
+          return Math.abs(deltaB) - Math.abs(deltaA);
+        });
+      }
+    })();
+    
+    // Prepare data for grouped bars - Short-term and Long-term grouped side-by-side
+    const skillBars = sorted.flatMap(d => [
+      { name: d.name, type: "Short-term", value: d.short, delta: d.delta, short: d.short, long: d.long },
+      { name: d.name, type: "Long-term", value: d.long, delta: d.delta, short: d.short, long: d.long }
     ]);
     
+    // Prepare data for delta bars (separate, can be negative)
+    // Delta = long - short (negative when long < short)
+    const deltaBars = sorted.map(d => {
+      const delta = (d.long != null && d.short != null) ? d.long - d.short : null;
+      return {
+        name: d.name,
+        type: "Delta",
+        value: delta,
+        delta: delta,
+        short: d.short,
+        long: d.long
+      };
+    }).filter(d => d.value != null);
+    
+    // Calculate responsive height
+    const itemCount = sorted.length;
+    const chartHeight = Math.min(Math.max(420, itemCount * 40), 600);
+    
+    // Determine if labels should be rotated
+    const rotateLabels = itemCount > 12;
+    const marginLeft = rotateLabels ? 150 : 80;
+    
+    // Calculate x-axis domain to accommodate negative delta values
+    const maxValue = Math.max(...sorted.map(d => Math.max(d.short || 0, d.long || 0)), 0.7);
+    const minDelta = Math.min(...deltaBars.map(d => d.value || 0), -0.1);
+    const xMin = Math.min(minDelta, -0.1);
+    const xMax = Math.max(maxValue, 0.7);
+    
+    // Generate ticks for x-axis
+    const tickStep = 0.1;
+    const ticks = [];
+    for (let i = Math.ceil(xMin / tickStep) * tickStep; i <= xMax; i += tickStep) {
+      if (Math.abs(i) < 0.01) ticks.push(0);
+      else ticks.push(Math.round(i * 10) / 10);
+    }
+    
     return Plot.plot({
+      marginLeft: marginLeft,
       width: 900,
-      height: Math.max(400, s13Data.length * 25),
-      marginLeft: 150,
-      x: { label: "Forecast Skill (RPSS)", domain: [0, 1] },
-      y: { label: null },
-      color: { 
-        domain: ["Short-term", "Long-term"],
-        range: ["#4575b4", "#d73027"],
-        legend: true
+      height: chartHeight,
+      x: {
+        label: "RPSS (0-1) or Δ",
+        domain: [xMin, xMax],
+        ticks: ticks,
+        grid: true
+      },
+      y: {
+        type: "band",
+        label: null,
+        domain: sorted.map(d => d.name),
+        padding: 0.2
+      },
+      color: {
+        legend: true,
+        domain: ["Short-term", "Long-term", "Delta"],
+        range: ["#1f77b4", "#ff7f0e", "#808080"]
       },
       marks: [
-        Plot.barX(chartData, {
+        // Grouped bars for Short-term and Long-term (side-by-side)
+        Plot.barX(skillBars, {
           x: "value",
-          y: "admin",
+          y: "name",
           fill: "type",
-          title: d => `${d.admin}\n${d.type}: ${d.value?.toFixed(3) || 'N/A'}`
+          tip: true,
+          channels: {
+            delta: "delta",
+            short: "short",
+            long: "long"
+          },
+          title: d => {
+            const short = d.short != null ? d.short.toFixed(2) : 'N/A';
+            const long = d.long != null ? d.long.toFixed(2) : 'N/A';
+            const delta = d.delta != null ? (d.delta >= 0 ? "+" : "") + d.delta.toFixed(2) : 'N/A';
+            return `${d.name} | Short = ${short} | Long = ${long} | Δ = ${delta}`;
+          }
         }),
+        // Delta bars (separate, can be negative, extending left from 0)
+        Plot.barX(deltaBars, {
+          x: d => d.value,
+          x1: 0, // Start from 0, extend left for negative values
+          y: "name",
+          fill: "Delta",
+          tip: true,
+          channels: {
+            delta: "delta",
+            short: "short",
+            long: "long"
+          },
+          title: d => {
+            const short = d.short != null ? d.short.toFixed(2) : 'N/A';
+            const long = d.long != null ? d.long.toFixed(2) : 'N/A';
+            const delta = d.delta != null ? (d.delta >= 0 ? "+" : "") + d.delta.toFixed(2) : 'N/A';
+            return `${d.name} | Short = ${short} | Long = ${long} | Δ = ${delta}`;
+          }
+        }),
+        // Reference line at 0 for delta bars
+        Plot.ruleX([0], { stroke: "#333", strokeWidth: 1 }),
+        // Reference lines at 0.4 and 0.6
         Plot.ruleX([0.4, 0.6], { stroke: "#999", strokeDasharray: "4,4" })
       ]
     });
