--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -126,7 +126,7 @@ atlasHero(nbTitle, hero_url);
     <div class="sidebar-section">
       ${viewof selectedAdmin2}
     </div>
-    <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid #eee; font-size: 0.9em; color: #666;">
+    <div style="margin-top: 15px; padding: 15px; border-top: 1px solid #eee; font-size: 0.9em; color: #666;">
       <strong>Current Selection:</strong><br>
       ${breadcrumb}
     </div>
