fix(enhanced multi-seelct): Typo fix

--- a/components/_adminSelectorsMulti.qmd
+++ b/components/_adminSelectorsMulti.qmd
@@ -68,7 +68,7 @@ renderA0Multi = ({maxSelections = Infinity, requireAtLeastOne = false} = {}) => 
       }
     );
     // Adds the additional features to the multi-select
-    enahncedMultiSelect(_admin0, { maxSelections, requireAtLeastOne })
+    enhancedMultiSelect(_admin0, { maxSelections, requireAtLeastOne })
     // Bind to the main global multi-select for updates across NB
     return Inputs.bind(_admin0, viewof admin0Select)
 }
@@ -101,7 +101,7 @@ renderA1Multi = ({maxSelections = Infinity, requireAtLeastOne = false} = {}) => 
         multiple: true
       }
     )
-    enahncedMultiSelect(_admin1, { maxSelections, requireAtLeastOne })
+    enhancedMultiSelect(_admin1, { maxSelections, requireAtLeastOne })
     return Inputs.bind(_admin1, viewof admin1Select)
 }
 ```
@@ -126,7 +126,7 @@ renderA2Multi = ({maxSelections = Infinity, requireAtLeastOne = false} = {}) => 
         multiple: true
       }
     )
-    enahncedMultiSelect(_admin2, { maxSelections, requireAtLeastOne })
+    enhancedMultiSelect(_admin2, { maxSelections, requireAtLeastOne })
     return Inputs.bind(_admin2, viewof admin2Select)
 }
 ```
