--- a/notebooks/hazardExposure/hazardExposure.qmd
+++ b/notebooks/hazardExposure/hazardExposure.qmd
@@ -9,7 +9,7 @@ date-edited: today
 
 ```{ojs}
 import { atlasTOC, atlasHero } from "/helpers/uiComponents.ojs";
-import { enahncedMultiSelect } from "/helpers/enhancedMultiSelect.ojs";
+import { enhancedMultiSelect } from "/helpers/enhancedMultiSelect.ojs";
 
 hero_url = "./../../images/default_crop.webp";
 // This ^^ must be relative path due to an issue
