--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -733,7 +733,7 @@ s13Data = {
 // Section 1.3 Chart/Table
 {
   if (s13ViewType === "Chart") {
-    // Prepare data with delta for grouped bar chart
+    // Prepare data with delta for vertically stacked bars
     const dataWithDelta = s13Data.map(d => {
       const short = d.shortTerm != null ? parseFloat(d.shortTerm.toFixed(2)) : null;
       const long = d.longTerm != null ? parseFloat(d.longTerm.toFixed(2)) : null;
@@ -765,37 +765,40 @@ s13Data = {
       }
     })();
     
-    // Prepare data for grouped bars - Short-term and Long-term grouped side-by-side
-    const skillBars = sorted.flatMap(d => [
-      { name: d.name, type: "Short-term", value: d.short, delta: d.delta, short: d.short, long: d.long },
-      { name: d.name, type: "Long-term", value: d.long, delta: d.delta, short: d.short, long: d.long }
+    // Flatten data for vertical stacking: each country gets 3 rows in order (Delta on top, Long in middle, Short on bottom)
+    const stackedData = sorted.flatMap(d => [
+      { 
+        country: d.name, 
+        metric: "Δ (Long − Short)",
+        label: `${d.name} | Δ`,
+        value: d.delta,
+        order: 0  // Top position
+      },
+      { 
+        country: d.name, 
+        metric: "Long-term RPSS (11-12 mo)",
+        label: `${d.name} | Long`,
+        value: d.long,
+        order: 1  // Middle position
+      },
+      { 
+        country: d.name, 
+        metric: "Short-term RPSS (1-2 mo)",
+        label: `${d.name} | Short`,
+        value: d.short,
+        order: 2  // Bottom position
+      }
     ]);
     
-    // Prepare data for delta bars (separate, can be negative)
-    // Delta = long - short (negative when long < short)
-    const deltaBars = sorted.map(d => {
-      const delta = (d.long != null && d.short != null) ? d.long - d.short : null;
-      return {
-        name: d.name,
-        type: "Delta",
-        value: delta,
-        delta: delta,
-        short: d.short,
-        long: d.long
-      };
-    }).filter(d => d.value != null);
+    // Calculate responsive height - 3 bars per country
+    const itemCount = sorted.length * 3;
+    const chartHeight = Math.max(600, itemCount * 18);
     
-    // Calculate responsive height
-    const itemCount = sorted.length;
-    const chartHeight = Math.min(Math.max(420, itemCount * 40), 600);
-    
-    // Determine if labels should be rotated
-    const rotateLabels = itemCount > 12;
-    const marginLeft = rotateLabels ? 150 : 80;
+    const marginLeft = 150;
     
     // Calculate x-axis domain to accommodate negative delta values
     const maxValue = Math.max(...sorted.map(d => Math.max(d.short || 0, d.long || 0)), 0.7);
-    const minDelta = Math.min(...deltaBars.map(d => d.value || 0), -0.1);
+    const minDelta = Math.min(...sorted.map(d => d.delta || 0), -0.1);
     const xMin = Math.min(minDelta, -0.1);
     const xMax = Math.max(maxValue, 0.7);
     
@@ -806,6 +809,9 @@ s13Data = {
       if (Math.abs(i) < 0.01) ticks.push(0);
       else ticks.push(Math.round(i * 10) / 10);
     }
+    
+    // Create y-axis domain maintaining the proper vertical order for each country
+    const yDomain = stackedData.map(d => d.label);
     
     return Plot.plot({
       marginLeft: marginLeft,
@@ -818,58 +824,27 @@ s13Data = {
         grid: true
       },
       y: {
-        type: "band",
         label: null,
-        domain: sorted.map(d => d.name),
-        padding: 0.2
+        domain: yDomain,
+        padding: 0.15
       },
       color: {
         legend: true,
-        domain: ["Short-term", "Long-term", "Delta"],
+        domain: ["Short-term RPSS (1-2 mo)", "Long-term RPSS (11-12 mo)", "Δ (Long − Short)"],
         range: ["#1f77b4", "#ff7f0e", "#808080"]
       },
       marks: [
-        // Grouped bars for Short-term and Long-term (side-by-side)
-        Plot.barX(skillBars, {
-          x: "value",
-          y: "name",
-          fill: "type",
-          tip: true,
-          channels: {
-            delta: "delta",
-            short: "short",
-            long: "long"
-          },
-          title: d => {
-            const short = d.short != null ? d.short.toFixed(2) : 'N/A';
-            const long = d.long != null ? d.long.toFixed(2) : 'N/A';
-            const delta = d.delta != null ? (d.delta >= 0 ? "+" : "") + d.delta.toFixed(2) : 'N/A';
-            return `${d.name} | Short = ${short} | Long = ${long} | Δ = ${delta}`;
-          }
-        }),
-        // Delta bars (separate, can be negative, extending left from 0)
-        Plot.barX(deltaBars, {
-          x: d => d.value,
-          x1: 0, // Start from 0, extend left for negative values
-          y: "name",
-          fill: "Delta",
-          tip: true,
-          channels: {
-            delta: "delta",
-            short: "short",
-            long: "long"
-          },
-          title: d => {
-            const short = d.short != null ? d.short.toFixed(2) : 'N/A';
-            const long = d.long != null ? d.long.toFixed(2) : 'N/A';
-            const delta = d.delta != null ? (d.delta >= 0 ? "+" : "") + d.delta.toFixed(2) : 'N/A';
-            return `${d.name} | Short = ${short} | Long = ${long} | Δ = ${delta}`;
-          }
-        }),
-        // Reference line at 0 for delta bars
+        // Reference line at 0
         Plot.ruleX([0], { stroke: "#333", strokeWidth: 1 }),
-        // Reference lines at 0.4 and 0.6
-        Plot.ruleX([0.4, 0.6], { stroke: "#999", strokeDasharray: "4,4" })
+        
+        // All bars stacked vertically, maintaining order
+        Plot.barX(stackedData.filter(d => d.value != null), {
+          x1: 0,
+          x2: "value",
+          y: "label",
+          fill: "metric",
+          title: d => `${d.country}\n${d.metric}: ${d.value?.toFixed(2) || 'N/A'}`
+        })
       ]
     });
   } else {
