Reduce bar size in Section 1.3 chart to match wireframe

--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -790,9 +790,9 @@ s13Data = {
       }
     ]);
     
-    // Calculate responsive height - 3 bars per country
+    // Calculate responsive height - 3 bars per country (smaller bars to match wireframe)
     const itemCount = sorted.length * 3;
-    const chartHeight = Math.max(600, itemCount * 18);
+    const chartHeight = Math.max(500, itemCount * 12);  // Reduced from 18 to 12 for thinner bars
     
     const marginLeft = 150;
     
@@ -826,7 +826,7 @@ s13Data = {
       y: {
         label: null,
         domain: yDomain,
-        padding: 0.15
+        padding: 0.3  // Increased from 0.15 to 0.3 for tighter bars
       },
       color: {
         legend: true,
