Add x-axis to both top and bottom of Section 1.3 chart

--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -14,16 +14,16 @@ cisDB = await DuckDBClient.of({
 cisDataRaw = await cisDB.query(`SELECT * FROM cis_data`);
 
 cisData = cisDataRaw.map(row => ({
-  ...row,
-  "weather-station_density": parseFloat(row["weather-station_density"]),
-  "cloud-coverage_meanannual": parseFloat(row["cloud-coverage_meanannual"]),
-  "cv-precipitation_agreement": parseFloat(row["cv-precipitation_agreement"]),
-  "short-term_frcst_skill": parseFloat(row["short-term_frcst_skill"]),
-  "seasonal_frcst_skill": parseFloat(row["seasonal_frcst_skill"]),
-  "cis_readiness_index": parseFloat(row["cis_readiness_index"]),
-  gaul0_code: parseInt(row.gaul0_code),
-  gaul1_code: parseInt(row.gaul1_code),
-  gaul2_code: parseInt(row.gaul2_code)
+    ...row,
+    "weather-station_density": parseFloat(row["weather-station_density"]),
+    "cloud-coverage_meanannual": parseFloat(row["cloud-coverage_meanannual"]),
+    "cv-precipitation_agreement": parseFloat(row["cv-precipitation_agreement"]),
+    "short-term_frcst_skill": parseFloat(row["short-term_frcst_skill"]),
+    "seasonal_frcst_skill": parseFloat(row["seasonal_frcst_skill"]),
+    "cis_readiness_index": parseFloat(row["cis_readiness_index"]),
+    gaul0_code: parseInt(row.gaul0_code),
+    gaul1_code: parseInt(row.gaul1_code),
+    gaul2_code: parseInt(row.gaul2_code)
 }));
 ```
 
@@ -473,10 +473,10 @@ s11MapData = {
         : `${d.admin2_name}, ${d.admin1_name}`;
       return {
         "Admin Name": adminName,
-        "Weather Station (Raw)": d["weather-station_density"]?.toFixed(3) || "N/A",
-        "Weather Station (Class)": classifyTercile(d["weather-station_density"], africaTerciles.weatherStation),
-        "Cloud Cover (Raw)": d["cloud-coverage_meanannual"]?.toFixed(3) || "N/A",
-        "Cloud Cover (Class)": classifyTercile(d["cloud-coverage_meanannual"], africaTerciles.cloudCover)
+      "Weather Station (Raw)": d["weather-station_density"]?.toFixed(3) || "N/A",
+      "Weather Station (Class)": classifyTercile(d["weather-station_density"], africaTerciles.weatherStation),
+      "Cloud Cover (Raw)": d["cloud-coverage_meanannual"]?.toFixed(3) || "N/A",
+      "Cloud Cover (Class)": classifyTercile(d["cloud-coverage_meanannual"], africaTerciles.cloudCover)
       };
     });
     
@@ -612,8 +612,8 @@ s12MapData = {
         : `${d.admin2_name}, ${d.admin1_name}`;
       return {
         "Admin Name": adminName,
-        "Satellite Agreement (Raw)": parseFloat(d["cv-precipitation_agreement"])?.toFixed(1) || "N/A",
-        "Satellite Agreement (Class)": classifyPrecipAgreement(d["cv-precipitation_agreement"])
+      "Satellite Agreement (Raw)": parseFloat(d["cv-precipitation_agreement"])?.toFixed(1) || "N/A",
+      "Satellite Agreement (Class)": classifyPrecipAgreement(d["cv-precipitation_agreement"])
       };
     });
     
@@ -636,8 +636,8 @@ downloadButton(
       : `${d.admin2_name}, ${d.admin1_name}`;
     return {
       "Admin Name": adminName,
-      "Satellite Agreement": parseFloat(d["cv-precipitation_agreement"]),
-      "Classification": classifyPrecipAgreement(d["cv-precipitation_agreement"])
+    "Satellite Agreement": parseFloat(d["cv-precipitation_agreement"]),
+    "Classification": classifyPrecipAgreement(d["cv-precipitation_agreement"])
     };
   }),
   "cis_precipitation_agreement",
@@ -815,10 +815,13 @@ s13Data = {
     
     return Plot.plot({
       marginLeft: marginLeft,
+      marginTop: 30,
+      marginBottom: 50,
       width: 900,
       height: chartHeight,
       x: {
         label: "RPSS (0-1) or Δ",
+        labelAnchor: "center",
         domain: [xMin, xMax],
         ticks: ticks,
         grid: true
@@ -834,6 +837,12 @@ s13Data = {
         range: ["#1f77b4", "#ff7f0e", "#808080"]
       },
       marks: [
+        // X-axis at top (without label)
+        Plot.axisX({ anchor: "top", label: null, ticks: ticks }),
+        
+        // X-axis at bottom (with label) - this is the default
+        Plot.axisX({ anchor: "bottom", label: "RPSS (0-1) or Δ", ticks: ticks }),
+        
         // Reference line at 0
         Plot.ruleX([0], { stroke: "#333", strokeWidth: 1 }),
         
@@ -1005,13 +1014,13 @@ s14MapData = {
         : `${d.admin2_name}, ${d.admin1_name}`;
       return {
         "Admin Name": adminName,
-        "CIS Readiness (Raw)": d["cis_readiness_index"]?.toFixed(3) || "N/A",
-        "CIS Readiness (Class)": classifyTercile(d["cis_readiness_index"], africaTerciles.cisReadiness),
-        "Weather Station (Class)": classifyTercile(d["weather-station_density"], africaTerciles.weatherStation),
-        "Cloud Cover (Class)": classifyTercile(d["cloud-coverage_meanannual"], africaTerciles.cloudCover),
-        "Precip Agreement (Class)": classifyPrecipAgreement(d["cv-precipitation_agreement"]),
-        "Short-term (Raw)": d["short-term_frcst_skill"]?.toFixed(3) || "N/A",
-        "Long-term (Raw)": d["seasonal_frcst_skill"]?.toFixed(3) || "N/A"
+      "CIS Readiness (Raw)": d["cis_readiness_index"]?.toFixed(3) || "N/A",
+      "CIS Readiness (Class)": classifyTercile(d["cis_readiness_index"], africaTerciles.cisReadiness),
+      "Weather Station (Class)": classifyTercile(d["weather-station_density"], africaTerciles.weatherStation),
+      "Cloud Cover (Class)": classifyTercile(d["cloud-coverage_meanannual"], africaTerciles.cloudCover),
+      "Precip Agreement (Class)": classifyPrecipAgreement(d["cv-precipitation_agreement"]),
+      "Short-term (Raw)": d["short-term_frcst_skill"]?.toFixed(3) || "N/A",
+      "Long-term (Raw)": d["seasonal_frcst_skill"]?.toFixed(3) || "N/A"
       };
     });
     
@@ -1083,12 +1092,12 @@ downloadButton(
       : `${d.admin2_name}, ${d.admin1_name}`;
     return {
       "Admin Name": adminName,
-      "CIS Readiness Index": d["cis_readiness_index"],
-      "Weather Station Density": d["weather-station_density"],
-      "Cloud Coverage": d["cloud-coverage_meanannual"],
-      "Precipitation Agreement": parseFloat(d["cv-precipitation_agreement"]),
-      "Short-term Forecast Skill": d["short-term_frcst_skill"],
-      "Long-term Forecast Skill": d["seasonal_frcst_skill"]
+    "CIS Readiness Index": d["cis_readiness_index"],
+    "Weather Station Density": d["weather-station_density"],
+    "Cloud Coverage": d["cloud-coverage_meanannual"],
+    "Precipitation Agreement": parseFloat(d["cv-precipitation_agreement"]),
+    "Short-term Forecast Skill": d["short-term_frcst_skill"],
+    "Long-term Forecast Skill": d["seasonal_frcst_skill"]
     };
   }),
   "cis_readiness_index",
